batchtest/templates/argo-webhook-gateway.yaml
apiVersion: argoproj.io/v1alpha1
kind: Gateway
metadata:
  name: webhook-gateway
  labels:
    # gateway controller with instanceId "argo-events" will process this gateway
    gateways.argoproj.io/gateway-controller-instanceid: argo-events
  annotations:
    foo: bar
spec:
  replica: 1
  type: webhook
  eventSourceRef:
    name: webhook-event-source
  template:
    metadata:
      name: webhook-gateway
      labels:
        gateway-name: webhook-gateway
    spec:
      containers:
        - name: gateway-client
          image: argoproj/gateway-client:v0.13.0-rc
          imagePullPolicy: Always
          command: ["/bin/gateway-client"]
        - name: webhook-events
          image: argoproj/webhook-gateway:v0.13.0-rc
          imagePullPolicy: Always
          command: ["/bin/webhook-gateway"]
      serviceAccountName: argo-events-sa
  service:
    metadata:
      name: webhook-gateway-svc
    spec:
      selector:
        gateway-name: webhook-gateway
      ports:
        - port: 12000
          targetPort: 12000
      type: LoadBalancer
  subscribers:
    http:
      - "http://webhook-sensor.batchtest.svc:9300/"
